--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ script:
   - docker tag udagram-restapi-feed vitorhugo/udagram-restapi-feed:latest
   - docker build -t udagram-frontend ./udagram-frontend/
   - docker tag udagram-frontend vitorhugo/udagram-frontend:latest
+  - docker build -t reverse-proxy ./reverse-proxy/
+  - docker tag reverse-proxy vitorhugo/reverse-proxy:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
@@ -28,3 +30,4 @@ after_success:
   - docker push vitorhugo/udagram-restapi-user
   - docker push vitorhugo/udagram-restapi-feed
   - docker push vitorhugo/udagram-frontend
+  - docker push vitorhugo/reverse-proxy
