finishing udagram project

--- a/docker_deployment/docker-compose-build.yaml
+++ b/docker_deployment/docker-compose-build.yaml
@@ -2,7 +2,7 @@ version: "3"
 services:
   reverseproxy:
     build:
-      context: .
+      context: ../reverse-proxy
     image: vitorhugo/reverse-proxy 
   backend_user:
     build:
