--- a/docker_deployment/docker-compose.yaml
+++ b/docker_deployment/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   backend-feed:
-    image: vitorhugo/udagram-restapi-feed
+    image: udagram-restapi-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
